--- a/baraton-water-senior-project/server/package.json
+++ b/baraton-water-senior-project/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=prod nodemon server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.js"
