--- a/baraton-water-senior-project/server/.env
+++ b/baraton-water-senior-project/server/.env
@@ -1,2 +1,3 @@
 MONGO = mongodb+srv://wairimugitungu:pass@cluster0.ozbmtsg.mongodb.net/booking?retryWrites=true&w=majority&appName=Cluster0
+# MONGO = mongodb+srv://wairimugitungu:pass@cluster0.ozbmtsg.mongodb.net/booking?retryWrites=true&w=majority&appName=Cluster0
 JWT = hihuhowijbdhvgas@1576786217387jhdfbnjsc\\\5hgysgdc%
