--- a/baraton-water-senior-project/server/package.json
+++ b/baraton-water-senior-project/server/package.json
@@ -23,6 +23,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "http-errors": "^2.0.0",
+    "intasend-node": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.5.1",
